Quorum/Library/Tests/TypeCheckerGenerated/Pass/RetAssignObjectTextObj.quorum
class Main
    action Main
        Object v = Test()
        Text var = cast(Text, v)
        if var:GetValue() = "text"
            output "passed"
        end
    end

    action Test() returns Object
        Text var
        var:SetValue("text")
        return var
    end
end