Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntegerTextObjField.quorum
class Main
    integer v = Test()
    action Main
    end

    action Test() returns integer
        Text var
        var:SetValue("text")
        return var
    end
end